--- a/n-chains/n-chains-client/index.html
+++ b/n-chains/n-chains-client/index.html
@@ -1,18 +1,20 @@
 <html>
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-<script src="src/main/js/core/Namespace.js"></script>
-<script src="src/main/js/core/Logger.js"></script>
-<script src="src/main/js/Application.js"></script>
-<script>
-  $(document).ready(function () {
-  	new NCHAINS.Application().initialize();
-  });
-</script>
-<meta charset=utf-8 />
-<title>NCHAINS</title>
+	<link rel="stylesheet" type="text/css" href="src/main/css/style.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+	<script src="src/main/js/core/Namespace.js"></script>
+	<script src="src/main/js/core/Logger.js"></script>
+	<script src="src/main/js/Application.js"></script>
+	<script>
+	  $(document).ready(function () {
+	  	new NCHAINS.Application().initialize();
+	  });
+	</script>
+	<meta charset=utf-8 />
+	<title>NCHAINS</title>
 </head>
 <body>
-  <p>&nbsp;</p>
+  <h4>CONSOLE</h4>
+  <p class="console">&nbsp;</p>
 </body>
 </html>
