NCHAINS client stuff

--- a/n-chains/n-chains-client/index.html
+++ b/n-chains/n-chains-client/index.html
@@ -14,7 +14,7 @@
 	<title>NCHAINS</title>
 </head>
 <body>
-  <h4>CONSOLE</h4>
+  <h4 style="color: white;">CONSOLE</h4>
   <p class="console">&nbsp;</p>
 </body>
 </html>
